attempting to prevent layout breaking in profile__info

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -18,6 +18,11 @@
   grid-template-columns: minmax(auto, 373px) auto;
   grid-template-areas: "name button" "description description";
   grid-gap: 9px 17px;
+  /*This prevents the layout from breaking if there is too long user input*/
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 415px;
 }
 
 .profile__name {
